--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
 body {
     background-color: bisque;
-    font-family: 'Courier New', Courier, monospace;
+    font-family:Arial, Helvetica, sans-serif;
     color: firebrick;
+    padding: 0;
+    margin: 24px;
 }
 
-h1 {
-    text-align: center;
-    font-weight: 900;
-    font-size: 50px;
+* {
+    /* border: 1px solid black; */
+    margin: 0;
 }
 
 .first-img {
@@ -15,17 +16,45 @@ h1 {
     width: auto;
 }
 
-h2 {
+h1 {
+    text-align: center;
     font-weight: 900;
-    font-size: 30px;
+    font-size: 60px;
+    padding: 4px;
+}
+
+h2 {
+    font-weight: 800;
+    font-size: 40px;
+    padding: 4px;
 }
 
 ul, ol, p {
     font-weight: 600;
-    font-size: 18px;
+    font-size: 20px;
+    padding: 8px 24px;
+}
+
+ol img {
+    height: 150px;
 }
 
 .novigator ul{
     list-style-type: none;
     text-align: center;
+}
+
+.link {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+button {
+    background-color: firebrick;
+    padding: 4px;
+}
+
+a {
+    color: black;
 }
